# NEW-Ski-Price-Aggregator

./: .gitignore  .replit  README.md  app.py  christysports.py  featured_skis.json  gunicorn_config.py  index.html  main.py  pyproject.toml  replit.nix  requirements.txt  ski_prices.json  ski_prices.json.bak  skipro.py  skisniper.nginx.conf  skisniper.service  untracked.py
scrapers/: __init__.py  bakerst.py  blackcrows.py  bootpro.py  christysports.py  evo.py  gearx.py  skihaus.py  skipro.py  sportsbasement.py  untracked.py  utahskigear.py
static/css/: styles.css
templates/: index.html
