[tool.poetry]
name = "ski-price-aggregator"
version = "0.1.0"
description = "A tool to track ski prices across different websites"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
